# langchain-react-agent

./: .env.example  .gitignore  MULTI_AGENT_GUIDE.md  README.md  agent.py  config.py  main.py  memory.py  pyproject.toml  requirements.txt  rewrite_app.py  server.py  test_api.py  test_document.txt  test_document_agent.py  test_document_question.py  test_document_txt.py  test_send.py  test_static.py
docs/: ARCHITECTURE.md
frontend/: index.html
src/: __init__.py  agent.py  config.py
src/agents/: __init__.py  base.py  code.py  coordinator.py  document.py  general.py  research.py
src/api/: __init__.py  models.py  routes.py
src/frontend/: app.js  app.js.bak  index.html
src/memory/: __init__.py
src/tools/: __init__.py  doc_reader.py  search.py
tests/: __init__.py  test_agents.py  test_api.py
tools/: doc_reader.py  search.py
